--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ html {
 .u-bg-red, .badge-positioner .badge {
   background-color: #e74949 !important; }
 
-.u-color-tan {
+.u-color-tan, .copyright {
   color: #dddad5 !important; }
 
 .u-bg-tan {
@@ -86,7 +86,7 @@ html {
 .u-display-block {
   display: block; }
 
-.u-display-none {
+.u-display-none, .newsletter {
   display: none; }
 
 .u-display-inline {
@@ -394,7 +394,7 @@ html {
 [class*="u-span-"]:last-child {
   margin-right: 0; }
 
-.u-flex-items-center {
+.u-flex-items-center, .newsletter {
   -webkit-box-align: center;
   -moz-box-align: center;
   box-align: center;
@@ -518,7 +518,7 @@ html {
   justify-content: space-around;
   -ms-flex-pack: distribute; }
 
-.u-flex-justify-between {
+.u-flex-justify-between, .newsletter {
   -webkit-box-pack: justify;
   -moz-box-pack: justify;
   box-pack: justify;
@@ -671,7 +671,7 @@ html {
 .u-ma-2 {
   margin: 2rem; }
 
-.u-mt-2 {
+.u-mt-2, .footer-nav {
   margin-top: 2rem; }
 
 .u-mr-2 {
@@ -691,7 +691,7 @@ html {
   margin-top: 2rem;
   margin-bottom: 2rem; }
 
-.u-pa-2 {
+.u-pa-2, .card {
   padding: 2rem; }
 
 .u-pt-2 {
@@ -738,7 +738,7 @@ html {
   margin-top: 3rem;
   margin-bottom: 3rem; }
 
-.u-pa-3, .card {
+.u-pa-3 {
   padding: 3rem; }
 
 .u-pt-3 {
@@ -911,10 +911,10 @@ html {
 .u-weight-bold {
   font-weight: 700; }
 
-.u-caps {
+.u-caps, .copyright {
   text-transform: uppercase; }
 
-.u-font-size-xs {
+.u-font-size-xs, .copyright {
   font-size: .5em; }
 
 .u-font-size-sm, figure figcaption, .module__sidebar .sidebar {
@@ -958,7 +958,7 @@ html {
   font-style: Italic;
   font-weight: Normal; }
 
-.u-font-miller-bold, h5, .h5, h6, .h6, .button, .header-menu .menu-item a, .site-header {
+.u-font-miller-bold, h5, .h5, h6, .h6, .button, .header-menu .menu-item a, .copyright, .site-header {
   font-family: "Miller Text Bd";
   font-style: Normal;
   font-weight: Normal; }
@@ -1560,8 +1560,10 @@ hr {
       height: auto; }
     .module--events-upcoming-list .badge-positioner .badge .h2,
     .module--events-upcoming-list .badge-positioner .badge span .u-caps,
+    .module--events-upcoming-list .badge-positioner .badge span .copyright,
     .module--events-upcoming-inline .badge-positioner .badge .h2,
-    .module--events-upcoming-inline .badge-positioner .badge span .u-caps {
+    .module--events-upcoming-inline .badge-positioner .badge span .u-caps,
+    .module--events-upcoming-inline .badge-positioner .badge span .copyright {
       color: white; }
 
 button {
@@ -1737,6 +1739,9 @@ TODO clean up the !important
   flex-direction: column;
   -ms-flex-direction: column;
   text-align: center; }
+  @media screen and (min-width: 768px) {
+    .card {
+      padding: 3rem; } }
   .card.has-badge {
     position: relative;
     margin-top: 4.5rem;
@@ -1891,7 +1896,7 @@ TODO clean up the !important
 
 .module--hero .card-positioner {
   width: 100%;
-  padding-top: 0; }
+  padding-top: 5rem; }
   @media screen and (min-width: 768px) {
     .module--hero .card-positioner {
       width: 57.5%;
@@ -2980,13 +2985,29 @@ div.zabuto_calendar div.legend span.badge-today {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
   .footer-row + .footer-row {
     border-top: 1px solid rgba(255, 255, 255, 0.15); }
 
 .footer-column {
-  flex: 1 0 50%;
-  color: white; }
+  flex: 0 100%;
+  color: white;
+  text-align: center; }
+  @media screen and (min-width: 768px) {
+    .footer-column {
+      flex: 1 0 50%;
+      text-align: left; } }
+
+@media screen and (min-width: 768px) {
+  .footer-nav {
+    margin-top: 0; } }
 
 .footer-menu {
   display: -webkit-box;
@@ -3004,15 +3025,30 @@ div.zabuto_calendar div.legend span.badge-today {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; }
   .footer-menu .menu-item {
-    flex: 1 0 33.33333%; }
-    .footer-menu .menu-item:nth-child(2n) {
-      flex: 1 0 66.66667%; }
+    flex: 0 100%;
+    text-align: center; }
+    @media screen and (min-width: 768px) {
+      .footer-menu .menu-item {
+        flex: 1 0 33.33333%;
+        text-align: left; }
+        .footer-menu .menu-item:nth-child(2n) {
+          flex: 1 0 66.66667%; } }
 
 .social__item {
   display: inline-block; }
   .social__item a {
     display: block;
     font-size: 1.5rem; }
+
+@media screen and (min-width: 768px) {
+  .newsletter {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex; } }
 
 body.home .preface {
   padding-top: 6.75rem; }
